// File: internal/handlers/auth_handler.go

package handlers

import (
	"context"

	pb "github.com/Nazerkh09/gajap/dev_microservice1/protobuf"
)

// AuthHandler handles authentication-related requests.
type AuthHandler struct {
	userManagementClient pb.UserManagementServiceClient
}

// NewAuthHandler creates a new instance of AuthHandler.
func NewAuthHandler(userManagementClient pb.UserManagementServiceClient) *AuthHandler {
	return &AuthHandler{
		userManagementClient: userManagementClient,
	}
}

// RegisterUser registers a new user.
func (h *AuthHandler) RegisterUser(ctx context.Context, req *pb.RegisterUserRequest) (*pb.RegisterUserResponse, error) {
	// TODO: Implement user registration logic

	return &pb.RegisterUserResponse{
		Success: true,
		Message: "User registered successfully",
	}, nil
}

// Login authenticates a user and provides an access token.
func (h *AuthHandler) Login(ctx context.Context, req *pb.LoginRequest) (*pb.LoginResponse, error) {
	// TODO: Implement user login logic

	return &pb.LoginResponse{
		AccessToken: "your-access-token",
	}, nil
}

// ValidateToken validates the authenticity and validity of an access token.
func (h *AuthHandler) ValidateToken(ctx context.Context, req *pb.ValidateTokenRequest) (*pb.ValidateTokenResponse, error) {
	// TODO: Implement token validation logic

	return &pb.ValidateTokenResponse{
		IsValid: true,
	}, nil
}

// GetUserPermissions retrieves the permissions of a user.
func (h *AuthHandler) GetUserPermissions(ctx context.Context, req *pb.GetUserPermissionsRequest) (*pb.GetUserPermissionsResponse, error) {
	// TODO: Implement user permission retrieval logic

	return &pb.GetUserPermissionsResponse{
		Permissions: []string{"read", "write"},
	}, nil
}
